fixed spacing and added a -

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -77,6 +77,10 @@ body {
   height: 50px; 
 }
 
+.story-link {
+	padding-bottom: 2px;
+
+}
 // .panel-footer {
 // 	padding:5px;
 // 	width: 100%;
